[package]
name = "ic-radix-signer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
ic-web3-rs = "0.1.6"
radix-transactions = { git = "https://github.com/radixdlt/radixdlt-scrypto" }
radix-common = { git = "https://github.com/radixdlt/radixdlt-scrypto" }
ic-cdk = "0.11.3"
futures = "0.3.30"
async-trait = "0.1.80"
