[package]
name = "example_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.11.3"
ic-radix-signer = { path = "../../../" }
anyhow = "1.0.83"
ic-web3-rs = "0.1.6"
radix-transactions = { git = "https://github.com/radixdlt/radixdlt-scrypto" }
